--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@phosphor-icons/react": "^2.1.7",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@tanstack/react-query": "^5.59.0",
     "@vanilla-extract/css": "^1.16.0",
@@ -23,9 +23,11 @@
     "next": "^14.2.13",
     "next-auth": "^4.24.8",
     "nookies": "^2.5.2",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "sharp": "^0.33.5",
     "uuid": "^10.0.0",
     "webpack": "^5.95.0",
     "zod": "^3.23.8"
