--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "next": "^14.2.13",
     "next-auth": "^4.24.8",
+    "next-seo": "^6.6.0",
     "nookies": "^2.5.2",
     "prisma": "^5.21.1",
     "react": "^18",
